# Py_HW_14_test_client_api

./: README.md  main.py  pyproject.toml
src/chemas/: contacts.py
src/routes/: auth.py  contacts.py
src/routes/static/: contacts.js  contacts_copy.js  create_contact.js  edit_avatar.js  edit_contact.js  login.js  main copy.js  singin.js  singup copy.js  singup.js  singup_test.js
src/routes/templates/: base.html  contacts copy.html  contacts.html  create_contact.html  edit_avatar.html  edit_contact.html  login copy.html  login.html  singin.html  singup.html  singup_test.html  test.html
src/schemas/: contacts.py
src/services/: storage.py
static/: contacts.js  login.js  main.js  storage.js
templates/: index.html
